avoid to return multistream info when not needed (added query param) + updated swagger docs
