# internal/transport/http/playlist.go
@@ -13,7 +13,7 @@ type PlaylistService interface {
 	CreatePlaylist(c echo.Context, playlistDto playlist.Playlist) (*ent.Playlist, error)
 	AddVodToPlaylist(c echo.Context, playlistID uuid.UUID, vodID uuid.UUID) error
 	GetPlaylists(c echo.Context) ([]*ent.Playlist, error)
-	GetPlaylist(c echo.Context, playlistID uuid.UUID) (*ent.Playlist, error)
+	GetPlaylist(c echo.Context, playlistID uuid.UUID, withMultistreamInfo bool) (*ent.Playlist, error)
 	UpdatePlaylist(c echo.Context, playlistID uuid.UUID, playlistDto playlist.Playlist) (*ent.Playlist, error)
 	SetVodDelayOnPlaylist(c echo.Context, playlistID uuid.UUID, vodId uuid.UUID, delayMs int) error
 	DeletePlaylist(c echo.Context, playlistID uuid.UUID) error
@@ -113,10 +113,10 @@ func (h *Handler) AddVodToPlaylist(c echo.Context) error {
 //	@Produce		json
 //	@Param			id		path		string						true	"playlist id"
 //	@Param			delay	body		SetVodDelayPlaylistRequest	true	"delay"
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	utils.ErrorResponse
-//	@Failure		500	{object}	utils.ErrorResponse
-//	@Router			/playlist/{id} [post]
+//	@Success		200		{object}	string
+//	@Failure		400		{object}	utils.ErrorResponse
+//	@Failure		500		{object}	utils.ErrorResponse
+//	@Router			/playlist/{id} [put]
 //	@Security		ApiKeyCookieAuth
 func (h *Handler) SetVodDelayOnPlaylist(c echo.Context) error {
 	pID, err := uuid.Parse(c.Param("id"))
@@ -166,17 +166,18 @@ func (h *Handler) GetPlaylists(c echo.Context) error {
 //	@Tags			Playlist
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		string	true	"playlist id"
-//	@Success		200	{object}	ent.Playlist
-//	@Failure		400	{object}	utils.ErrorResponse
-//	@Failure		500	{object}	utils.ErrorResponse
+//	@Param			id						path		string	true	"playlist id"
+//	@Param			with_multistream_info	query		boolean	false	"include multistream info"
+//	@Success		200						{object}	ent.Playlist
+//	@Failure		400						{object}	utils.ErrorResponse
+//	@Failure		500						{object}	utils.ErrorResponse
 //	@Router			/playlist/{id} [get]
 func (h *Handler) GetPlaylist(c echo.Context) error {
 	pID, err := uuid.Parse(c.Param("id"))
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, "invalid playlist id")
 	}
-	rPlaylist, err := h.Service.PlaylistService.GetPlaylist(c, pID)
+	rPlaylist, err := h.Service.PlaylistService.GetPlaylist(c, pID, c.QueryParams().Get("with_multistream_info") == "true")
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
 	}
